--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ base: &base
   encoding: utf8
   reconnect: false
   username: root
-  password: test
+  password: password
   socket: /tmp/mysql.sock
   pool: 5
 
