--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ base: &base
   encoding: utf8
   reconnect: false
   username: root
-  password: password
+  password: <%= `localhost` =~ /localhost.localdomain/ ? 'password' : nil %>
   socket: /tmp/mysql.sock
   pool: 5
 
